--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,22 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  android_intent_plus: ^5.3.0
   cupertino_icons: ^1.0.8
+  device_info_plus: ^11.5.0
   dio: ^5.8.0+1
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^19.3.0
   go_router: ^16.0.0
   google_fonts: ^6.2.1
   intl: ^0.20.2
+  mockito: ^5.4.6
   path: ^1.9.1
   provider: ^6.1.5
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
